# Web-Calculator

./: .gitignore  README.md  index.html  package-lock.json  package.json
assets/: main.js  style.css
frontend/: index.html
tests/cpp/: CMakeLists.txt
